[gd_scene load_steps=4 format=3 uid="uid://t214yeldpfre"]

[ext_resource type="Texture2D" uid="uid://c7kgp4r6v4g7x" path="res://Images/Other/Card.png" id="1_38l3i"]
[ext_resource type="Script" path="res://Scenes/card_ui.gd" id="1_chwo5"]
[ext_resource type="Texture2D" uid="uid://b1hghklkelfwo" path="res://Images/Other/reinforced_rounds_card.png" id="3_mmafh"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(240, 320)
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 320.0
pivot_offset = Vector2(120, 160)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_chwo5")

[node name="CardBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 320.0
texture = ExtResource("1_38l3i")

[node name="CardDescription" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 20.0
offset_top = 181.0
offset_right = 220.0
offset_bottom = 231.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Description
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 8

[node name="CardImage" type="Sprite2D" parent="MarginContainer"]
unique_name_in_owner = true
position = Vector2(120, 113)
scale = Vector2(0.311, 0.311)
texture = ExtResource("3_mmafh")

[node name="CardName" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardCost" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0
"

[node name="CardType" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Type"

[node name="ToolTips" type="VBoxContainer" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = 250.0
offset_top = 5.0
offset_right = 290.0
offset_bottom = 45.0
